--- a/css/wireframe.css
+++ b/css/wireframe.css
@@ -27,7 +27,7 @@ h1{
 
 .row.letrin{
 	color: #666;
-  	font-family: arial;
+  	font-family: helvetica;
   	font-size: 13px; 
 }
 
@@ -39,4 +39,62 @@ h1{
   	width: 848px;
   	display: block;
   	margin-bottom: 20px;
+}
+
+.barrarecientever{
+	background-color: #efb4b4;
+	padding: 5px;
+	margin-bottom: 15px;
+}
+
+.row.recientenoti{
+	background-color: #f5e4e4;
+	width: 263px;
+	margin-left: 0;
+}
+
+
+.titulodenoticia {
+	margin:25px 0px 5px 0px;
+
+}
+
+.lasnoticiasrecientesver{
+	padding-bottom: 20px;
+}
+.row.vhg .btn-default.vh{
+	background-color: #FFEE94;
+}
+
+.row.masnotrela .cajadeesta{
+	width: 189px;
+	height: 125px;
+	background-color: #ece5a7;
+}
+
+.row.masnotrela .mostrarfoto{
+	width: 189px;
+	height: 90px;
+}
+
+.row.masnotrela .elfloro{
+	margin:7px 0px 0px 18px;
+	font-family: helvetica;
+
+}
+
+.row.elpadre .row.toditomas .masnoticiasvermas{
+	width: 270px;
+	height: 198px;
+	background-color: blue;
+}
+
+.row.elpadre .lafotazo{
+	width: 270px;
+	height: 140px;
+	background-color: red;
+}
+
+.row.elpadre .pocofloro{
+	
 }
